cabal-version:       >= 2.0

name:                cineschedule
version:             0.1.0.0
license-file:        LICENCE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
build-type:          Simple
extra-source-files:  README.md

executable cineschedule
  main-is:           cineschedule.hs
  other-modules:     Parser
  default-language:  Haskell2010
  build-depends:     base       ^>= 4.14,
                     time       ^>= 1.9,
                     text       ^>= 1.2,
                     attoparsec ^>= 0.13,
                     directory  ^>= 1.3,
                     process    ^>= 1.6,
                     haskeline  ^>= 0.8
