cabal-version:       2.0

name:                cineschedule
version:             0.1.0.0
license-file:        LICENCE
author:              Colm Baston
maintainer:          colm@colmbaston.uk
build-type:          Simple
extra-source-files:  README.md

executable cineschedule
  main-is:           cineschedule.hs
  other-modules:     Parser
  default-language:  GHC2021
  build-depends:     base       ^>= 4.16,
                     time       ^>= 1.12,
                     text       ^>= 2.0,
                     attoparsec ^>= 0.14,
                     directory  ^>= 1.3,
                     process    ^>= 1.6,
                     haskeline  ^>= 0.8
